# SoftServeStencil

./: CMakeLists.txt  README.md  before.txt  task.py  task.txt
include/: cpu_reference.hpp  cuda_kernels.cuh  defines.h  utils.hpp
res/: image1024.ppm  image256.ppm
src/: cpu_reference.cpp  cuda_kernels.cu  main.cpp  main_benchmark.cpp
tests/: benchmarks.cpp  correctness.cpp  generate.cpp  test_correctness.cpp  tests.h
